
syntax = "proto3";

option java_multiple_files = true;

package com.acme;

message User {
  string id = 1;
  string userName = 2;
  string mobile = 3;
  string email = 4;
  string position = 5;
  string businessUnit = 6;
  string oid = 7;
  string given_name = 8;
  string family_name = 9;
  string preferred_username = 10;
  string first_name = 11;
  string last_name = 12;
  string secondary_email = 13;
  string phone_number = 14;
  string extension = 15;
  string display_name = 16;
  string manager_id = 17;
  string user_role_id = 18;
  bool is_active = 19;


}

service authService{
  rpc getUserById(User) returns (User){};
}